player-panel: fix inventory overflowing

--- a/site/src/components/player-panel/player-inventory.css
+++ b/site/src/components/player-panel/player-inventory.css
@@ -8,11 +8,14 @@
 
 .player-inventory-item-box {
   padding-left: 4px;
+  min-width: 0;
+  min-height: 0;
 }
 
 .player-inventory-item-box > img {
   object-fit: contain;
   width: 100%;
+  image-rendering: auto;
 }
 
 .player-inventory-item-box-filled:hover {
